src/objects/Client_Welcome_Process__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Welcome_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Welcome Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collect_Passports_and_DL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collect Passports and DL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collected_Authorization_Form_from_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collected Authorization Form from Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Welcome Processes</relationshipLabel>
        <relationshipName>Client_Welcome_Processes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_vCard_for_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create vCard for Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executed_Agreement_Returned__c</fullName>
        <label>Executed Agreement Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gather_Aviation_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gather Aviation Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gather_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gather Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Money_Collected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Money Collected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Authorization_Forms_to_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Authorization Forms to Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thank_You_Note_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thank You Note Sent</label>
        <type>Checkbox</type>
    </fields>
    <label>Client Welcome Process</label>
    <nameField>
        <label>Client Welcome Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Welcome Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>